# lawflow-docker

./: .gitignore  APP_ARCHITECTURE.md  APP_SUMMARY.md  README.md  conveyancing-checklist.md  deployment-details-and-instructions.md  deployment-script.sh  docker-compose.yml  improvement-proposals.md  lawflow-developer-update-guide.md  note-back-front02.txt  run.sh
config/database/: README.md  postgres.example.env  sqlite.example.env
lawflow_backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
lawflow_backend/alembic/: env.py
lawflow_backend/alembic/versions/: 76aef5410a73_initial_migration.py  8be2436779fe_translate_checklist_items_to_spanish.py  b99ab0f91d48_add_versioning_preview_and_security_.py  fc73fd318893_add_timestamps_soft_delete_and_indexes_.py
lawflow_backend/app/: db.py  file_utils.py  main.py  models.py  pagination.py  preview_utils.py  schemas.py  seed.py
lawflow_backend/app/routers/: activity.py  calendar.py  checklists.py  closing_pack.py  files.py  projects.py  tasks.py  templates.py  timeline.py
lawflow_backend/lawflow_backend.egg-info/: PKG-INFO  SOURCES.txt
lawflow_frontend/: Dockerfile  README.md  index.html  overview.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
lawflow_frontend/src/: main.tsx  styles.css
lawflow_frontend/src/lib/: api.ts  formatting.ts  i18n.tsx  useAsync.ts
lawflow_frontend/src/ui/: ActivityFeed.tsx  App.tsx  Board.tsx  CalendarView.tsx  Checklist.tsx  ClosingPackView.tsx  (+14 more)
nginx/: default.conf
production/: lawflow-backend.service  lawflow-frontend.service  nginx.conf
(+7 files in other folders)
